--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -9,7 +9,7 @@
     <!-- Navigation drawer items -->
 
     <!-- Installer tab -->
-    <string name="install">Instalar/Actualizar</string>
+    <string name="install_update">Instalar/Actualizar</string>
     <string name="uninstall">Desinstalar</string>
     <string name="soft_reboot">Reinicie Software</string>
     <string name="reboot">Reinicie</string>
