--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,7 +22,7 @@
     <string name="navigation_drawer_close">Cerrar menú lateral</string>
 
     <!-- Installer tab -->
-    <string name="install">Instalar/Actualizar</string>
+    <string name="install_update">Instalar/Actualizar</string>
     <string name="uninstall">Desinstalar</string>
     <string name="soft_reboot">Reinicio suave</string>
     <string name="reboot">Reiniciar</string>
