--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,13 @@
     <string name="xposed_off_next_reboot">Xposed Framework will be disabled on next reboot</string>
     <string name="show_outdated">Show outdated</string>
     <string name="framework_device_info">Your device</string>
+    <string name="framework_install">Install</string>
+    <string name="framework_uninstall">Uninstall</string>
+    <string name="framework_install_recovery">Install via recovery</string>
+    <string name="framework_uninstall_recovery">Uninstall via recovery</string>
+    <string name="framework_delete">Delete downloaded file</string>
+    <string name="framework_zip_load_failed">Could not load available ZIP files. Pull down to try again.</string>
+    <string name="framework_no_zips">No matching ZIPs were found, it seems like your device is currently not supported.</string>
 
     <!-- File operations -->
     <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
@@ -80,11 +87,6 @@
     <string name="module_support">Support</string>
     <string name="module_app_info">App info</string>
     <string name="module_uninstall">Uninstall</string>
-    <string name="framework_install">Install</string>
-    <string name="framework_uninstall">Uninstall</string>
-    <string name="framework_install_recovery">Install via recovery</string>
-    <string name="framework_uninstall_recovery">Uninstall via recovery</string>
-    <string name="framework_delete">Delete downloaded file</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Search</string>
