Update German translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,12 +42,12 @@
     <string name="flash_error_timeout">Timeout occurred</string>
     <string name="flash_error_shell_died">Execution aborted unexpectedly</string>
     <string name="flash_error_invalid_zip">Not a flashable ZIP file</string>
-    <string name="flash_error_not_flashable_in_app">This file can only be flashed via recovery</string>
+    <string name="flash_error_not_flashable_in_app">This file can only be flashed via recovery.</string>
     <string name="flash_error_default">Error %d occurred</string>
     <string name="status">Xposed Status</string>
     <string name="xposed_on_next_reboot">Xposed Framework will be enabled on next reboot</string>
     <string name="xposed_off_next_reboot">Xposed Framework will be disabled on next reboot</string>
-    <string name="show_outdated">Show outdated</string>
+    <string name="show_outdated">Show outdated versions</string>
     <string name="framework_device_info">Your device</string>
     <string name="framework_install">Install</string>
     <string name="framework_uninstall">Uninstall</string>
