--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -27,6 +27,7 @@
     <string name="soft_reboot">Software-Neustart</string>
     <string name="reboot">Geräte-Neustart</string>
     <string name="reboot_recovery">Neustart ins Recovery</string>
+    <string name="not_now">Nicht jetzt</string>
     <string name="reboot_failed">Neustart fehlgeschlagen. Bitte verwende die normale Neustartfunktion des Geräts.</string>
     <string name="auto_flash_note">%s sollte automatisch installiert werden, sobald du "OK" drückst.</string>
     <string name="reboot_confirmation">Möchtest du jetzt neustarten?</string>
@@ -37,9 +38,24 @@
     <string name="framework_active">Xposed-Framework Version %s ist aktiv.</string>
     <string name="framework_not_active">Xposed-Framework Version %s ist installiert, aber nicht aktiv. Bitte schaue in den Logs nach Details.</string>
     <string name="framework_not_installed">Xposed-Framework ist nicht installiert.</string>
+    <string name="countdown">%1$s (%2$d)</string>
+    <string name="flash_error_timeout">Timeout aufgetreten</string>
+    <string name="flash_error_shell_died">Ausführung wurde unerwartet abgebrochen</string>
+    <string name="flash_error_invalid_zip">Keine flashbare ZIP-Datei</string>
+    <string name="flash_error_not_flashable_in_app">Diese Datei kann nur via Recovery geflasht werden</string>
+    <string name="flash_error_default">Fehler %d ist aufgetreten</string>
     <string name="status">Xposed Status</string>
     <string name="xposed_on_next_reboot">Xposed-Framework wird aktiviert beim nächsten Neustart</string>
     <string name="xposed_off_next_reboot">Xposed-Framework wird deaktiviert beim nächsten Neustart</string>
+    <string name="show_outdated">Zeige alte Versionen</string>
+    <string name="framework_device_info">Dein Gerät</string>
+    <string name="framework_install">Installieren</string>
+    <string name="framework_uninstall">Deinstallieren</string>
+    <string name="framework_install_recovery">Installieren via Recovery</string>
+    <string name="framework_uninstall_recovery">Deinstallieren via Recovery</string>
+    <string name="framework_delete">Heruntergeladene Datei löschen</string>
+    <string name="framework_zip_load_failed">Konnte die verfügbaren ZIPs nicht laden. Ziehe nach unten, um es erneut zu versuchen.</string>
+    <string name="framework_no_zips">Keine passenden ZIPs gefunden, dein Gerät scheint derzeit nicht unterstützt zu sein.</string>
 
     <!-- File operations -->
     <string name="root_failed">Root-Zugriff fehlgeschlagen\n\nStelle sicher, dass das Gerät korrekt gerootet ist und Shell-Kommandos nicht blockiert werden.</string>
@@ -55,6 +71,7 @@
     <string name="module_is_not_activated_yet">Xposed-Modul ist noch nicht aktiv</string>
     <string name="module_is_not_activated_yet_detailed">%s wurde installiert, aber noch nicht aktiviert.</string>
     <string name="activate_and_reboot">Aktivieren und neustarten</string>
+    <string name="activate_only">Nur aktivieren</string>
     <string name="module_activated">Xposed-Modul wurde aktiviert</string>
     <string name="module_empty_description">(keine Beschreibung vorhanden)</string>
     <string name="module_no_ui">Dieses Modul besitzt keine Benutzeroberfläche</string>
@@ -108,6 +125,8 @@
 
     <!-- Settings tab -->
     <string name="settings_group_download">Download</string>
+    <string name="settings_enable_downloads">Downloads aktivieren</string>
+    <string name="settings_enable_downloads_summary">Erlaube Xposed Installer, nach Updates und neuen Modulen zu suchen</string>
     <string name="settings_release_type">Anzuzeigende Versionen</string>
     <string name="settings_group_experimental">Experimentell</string>
     <string name="settings_disable_resources">Ressourcen-APIs deaktivieren</string>
@@ -166,6 +185,8 @@
     <string name="download_could_not_read_file">Heruntergeladene Datei kann nicht gelesen werden: %s</string>
     <string name="download_no_valid_apk">Heruntergeladene Datei ist keine gültige APK (oder inkompatibel)</string>
     <string name="download_incorrect_package_name">Paketname ist nicht korrekt (heruntergeladen: %1$s, erwartet: %2$s)</string>
+    <string name="download_running">Download läuft</string>
+    <string name="download_progress">%1$,d / %2$,d kB</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Herunterladen von %1$s fehlgeschlagen: %2$d (%3$s)</string>
@@ -198,5 +219,6 @@
     <string name="download_remove">Laden und entfernen</string>
     <string name="module_saved">Modul gespeichert unter %1$s</string>
     <string name="loading">Lädt…</string>
+    <string name="update_download_list">Ziehe nach unten, um die Liste zu aktualieren</string>
 
 </resources>
