--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,11 +3,11 @@
 
     <!-- General/various strings -->
     <string name="menuSend">发送</string>
-    <string name="menuSaveToSd">保存到 SD 卡</string>
-    <string name="xposed_not_active">最新版 Xposed 当前未激活。您是否已安装框架并重启？</string>
+    <string name="menuSaveToSd">保存至 SD 卡</string>
+    <string name="xposed_not_active">最新版本的 Xposed 框架当前未激活。您是否已安装框架并重启？</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome_framework_update_available">Xposed 框架有更新可用（%s）。</string>
+    <string name="welcome_framework_update_available">Xposed 框架模块可更新。</string>
     <string name="modules_updates_available">有模块可更新</string>
 
     <!-- Navigation drawer items -->
@@ -24,54 +24,77 @@
     <!-- Installer tab -->
     <string name="install_update">安装/更新</string>
     <string name="uninstall">卸载</string>
-    <string name="soft_reboot">软重启</string>
-    <string name="reboot">重启设备</string>
-    <string name="reboot_recovery">重启设备至恢复模式</string>
-    <string name="reboot_failed">重启设备失败。请使用设备的标准重启功能。</string>
-    <string name="auto_flash_note">当你按下 OK 后，%s 将会被自动刷入设备。</string>
-    <string name="reboot_confirmation">您现在要重启设备吗？</string>
-    <string name="install_warning_title">小心！</string>
-    <string name="dont_show_again">不要再显示这个</string>
-    <string name="install_known_issue">Xposed 与您的 ROM 似乎存在已知的问题（“%s”）。安装 Xposed 可能无法工作或引发严重问题。点击此处获知问题详情。</string>
-    <string name="framework_active">Xposed 框架 %s 版已激活。</string>
-    <string name="framework_not_active">Xposed 框架 %s 版已安装，但未激活。请检查日志的详细信息。</string>
-    <string name="framework_not_installed">Xposed 框架未安装。</string>
+    <string name="soft_reboot">快速重启</string>
+    <string name="reboot">正常重启</string>
+    <string name="reboot_recovery">重启至 Recovery 模式</string>
+    <string name="not_now">稍后再说</string>
+    <string name="reboot_failed">重启失败，请手动重启设备。</string>
+    <string name="auto_flash_note">当点击“确定”按钮时，%s 将会自动刷入系统。</string>
+    <string name="reboot_confirmation">您确认现在重启设备吗？</string>
+    <string name="install_warning_title">请注意！</string>
+    <string name="install_warning">在某些情况下，您安装 Xposed 后设备可能将无法启动。\n\n如果您没有听说过“变软砖”或“无限重启”，或者您不知道如何从这些情况下恢复，请 <b>不要</b> 安装 Xposed！\n\n无论如何，强烈建议您准备好最近的备份。</string>
+    <string name="dont_show_again">下次不再显示。</string>
+    <string name="install_known_issue">Xposed 与您的 ROM 似乎存在已知的问题（\"%s\"）。安装 Xposed 可能无法正常工作或引发严重问题。点击此处了解更多详情。</string>
+    <string name="framework_active">Xposed 框架 %s 版本已激活。</string>
+    <string name="framework_not_active">Xposed 框架 %s 版本已安装，但尚未激活。请检查日志了解更多详情。</string>
+    <string name="framework_not_installed">Xposed 框架尚未安装。</string>
+    <string name="countdown">%1$s (%2$d)</string>
+    <string name="flash_error_timeout">超时</string>
+    <string name="flash_error_shell_died">执行意外终止</string>
+    <string name="flash_error_invalid_zip">不是一个可刷入的 ZIP 文件</string>
+    <string name="flash_error_not_flashable_in_app">此文件无法通过 Recovery 刷入</string>
+    <string name="flash_error_default">发生错误 %d</string>
+    <string name="status">Xposed 状态</string>
+    <string name="xposed_on_next_reboot">Xposed 框架将会在下次重启设备之后启用</string>
+    <string name="xposed_off_next_reboot">Xposed 框架将会在下次重启设备之后禁用</string>
+    <string name="show_outdated">显示过时的版本</string>
+    <string name="framework_device_info">您的设备</string>
+    <string name="framework_install">安装</string>
+    <string name="framework_uninstall">卸载</string>
+    <string name="framework_install_recovery">通过 Recovery 安装</string>
+    <string name="framework_uninstall_recovery">通过 Recovery 卸载</string>
+    <string name="framework_delete">删除已下载的文件</string>
+    <string name="framework_zip_load_failed">无法载入可用的 ZIP 文件。请下拉刷新重试。</string>
+    <string name="framework_no_zips">未找到匹配的 ZIP 文件，目前似乎不支持您的设备。</string>
 
     <!-- File operations -->
-    <string name="file_copying">正在复制 %s…</string>
+    <string name="root_failed">无法获取 Root 权限。\n\n请确认您的设备已经正确的 Root 且未阻止 Shell 命令。</string>
+    <string name="file_copying">正在复制 %s&#8230;</string>
     <string name="file_copy_failed">无法将 %1$s 复制到 %2$s</string>
-    <string name="file_creating_directory">正在创建目录 %s…</string>
+    <string name="file_creating_directory">正在创建目录 %s&#8230;</string>
     <string name="file_create_directory_failed">无法创建目录 %s</string>
-    <string name="file_writing_recovery_command">正在写入恢复模式命令…</string>
-    <string name="file_writing_recovery_command_failed">写入恢复模式命令失败。请换一种安装方式。</string>
+    <string name="file_writing_recovery_command">正在写入 Recovery 命令&#8230;</string>
+    <string name="file_writing_recovery_command_failed">写入 Recovery 命令失败。请尝试其他安装方式。</string>
     <string name="file_done">完成！更改将于重启设备之后生效。</string>
 
     <!-- Modules tab -->
-    <string name="module_is_not_activated_yet">Xposed 模块未激活</string>
-    <string name="module_is_not_activated_yet_detailed">%s 已安装，但尚未激活。</string>
-    <string name="activate_and_reboot">激活并重启设备</string>
-    <string name="module_activated">Xposed 模块已激活</string>
+    <string name="module_is_not_activated_yet">Xposed 模块尚未激活</string>
+    <string name="module_is_not_activated_yet_detailed">已安装 %s，但尚未激活。</string>
+    <string name="activate_and_reboot">激活并重启</string>
+    <string name="activate_only">仅激活</string>
+    <string name="module_activated">Xposed 模块已被激活</string>
     <string name="module_empty_description">（未提供描述）</string>
     <string name="module_no_ui">该模块未提供用户界面</string>
     <string name="no_xposed_modules_found">未找到 Xposed 模块！</string>
+    <string name="xposed_module_list_updated">Xposed 模块列表已更新\n更改将会在重启设备之后生效</string>
     <string name="xposed_module_updated_notification_title">Xposed 模块已更新</string>
     <string name="xposed_module_updated_notification">重启设备以激活更新。</string>
-    <string name="warning_xposed_min_version">该模块需要 Xposed 新版（%d），因此无法激活。</string>
-    <string name="no_min_version_specified">该模块未指定需要的 Xposed 版本。</string>
-    <string name="warning_min_version_too_low">该模块在 Xposed %1$d 版下创建，但因为不兼容 %2$d 版中的更改，它已被禁用。</string>
-    <string name="module_launch">开启用户界面</string>
+    <string name="warning_xposed_min_version">该模块需要较新版本的 Xposed (%d)，因此无法激活。</string>
+    <string name="no_min_version_specified">该模块未指定其需要的 Xposed 版本。</string>
+    <string name="warning_min_version_too_low">该模块为 Xposed %1$d 版本创建，但因为不兼容版本 %2$d 中的变化内容，它已被禁用。</string>
+    <string name="module_launch">启动应用</string>
     <string name="module_download_updates">下载/更新</string>
-    <string name="module_support">支持</string>
+    <string name="module_support">获取支持</string>
     <string name="module_app_info">应用信息</string>
-    <string name="module_uninstall">卸载</string>
+    <string name="module_uninstall">卸载应用</string>
 
     <!-- Download tab -->
     <string name="menuSearch">搜索</string>
     <string name="menuReload">重新载入</string>
-    <string name="changes">更改：</string>
+    <string name="changes">更新日志：</string>
     <string name="download_details_page_description">描述</string>
     <string name="download_details_page_versions">版本</string>
-    <string name="download_details_page_settings">设定</string>
+    <string name="download_details_page_settings">设置</string>
     <string name="reltype_stable">稳定版</string>
     <string name="reltype_stable_summary">稳定版（低故障率）</string>
     <string name="reltype_beta">测试版</string>
@@ -82,86 +105,106 @@
     <string name="download_author">作者：%s</string>
     <string name="download_unknown_author">未知作者</string>
     <string name="download_status_installed">已安装（版本 %s）</string>
-    <string name="download_status_update_available">有更新（版本 %1$s → %2$s）</string>
-    <string name="download_timestamps">添加于 %1$s · 更新于 %2$s</string>
+    <string name="download_status_update_available">可更新（版本 %1$s \u2192 %2$s）</string>
+    <string name="download_timestamps">添加于 %1$s，更新于 %2$s</string>
     <string name="download_sorting_title">排序方式</string>
     <string name="download_sorting_status">按状态排序</string>
     <string name="download_sorting_updated">按最后更新排序</string>
     <string name="download_sorting_created">按创建日期排序</string>
     <string name="download_section_framework">框架</string>
-    <string name="download_section_update_available">有更新</string>
+    <string name="download_section_update_available">可更新</string>
     <string name="download_section_installed">已安装</string>
     <string name="download_section_not_installed">未安装</string>
     <string name="download_section_24h">最近 24 小时</string>
     <string name="download_section_7d">最近 7 天</string>
     <string name="download_section_30d">最近 30 天</string>
-    <string name="download_section_older">超过 30 天前</string>
-    <string name="download_details_not_found">无法在仓库中找到包名为“%s”的模块。</string>
+    <string name="download_section_older">30 天前</string>
+    <string name="download_details_not_found">无法在仓库中找到名为 \"%s\" 的模块。</string>
     <string name="download_no_versions">作者还没有上传任何版本。</string>
-    <string name="download_test_version_not_shown">有新的测试版可用，但根据您的全局或模块特定设置，未显示。</string>
+    <string name="download_test_version_not_shown">有新的测试版可用。但根据您的全局或模块设置，未被显示。</string>
 
     <!-- Settings tab -->
     <string name="settings_group_download">下载</string>
+    <string name="settings_enable_downloads">启用下载</string>
+    <string name="settings_enable_downloads_summary">允许 Xposed 安装器检查主程序和框架模块更新</string>
     <string name="settings_release_type">将显示的版本</string>
     <string name="settings_group_experimental">实验性</string>
     <string name="settings_disable_resources">禁用资源钩子</string>
+    <string name="settings_disable_resources_summary">用于解决与主题引擎的冲突\n<b>警告：</b>启用本选项将会导致修改资源的模块无法工作。</string>
     <string name="settings_group_app">应用</string>
     <string name="settings_theme">主题</string>
-    <string name="settings_theme_light">亮色</string>
+    <string name="settings_theme_light">浅色</string>
     <string name="settings_theme_dark">暗色</string>
-    <string name="settings_theme_black">黑色（对 AMOLED 屏幕有益）</string>
+    <string name="settings_theme_black">黑色（对 AMOLED 屏幕友好）</string>
     <string name="settings_default_view">默认视图</string>
+    <string name="open_drawer_summ">在启动时自动打开导航抽屉</string>
+    <string name="open_drawer">自动打开导航抽屉</string>
+    <string name="skip_xposedminversion_check">跳过“Xposed 最低版本”检测</string>
+    <string name="skip_xposedminversion_check_summ">跳过模块的“Xposed 最低版本”检测</string>
     <string name="chrome_custom_tabs">Chrome 自定义标签</string>
     <string name="chrome_custom_tabs_summ">在内置浏览器中打开链接</string>
+    <string name="download_location">下载位置</string>
+    <string name="download_location_summ">APK 文件的下载位置（仅模块）</string>
     <string name="notify_module_update">启用模块更新通知</string>
 
     <!-- Support tab -->
     <string name="support_modules_label">模块支持</string>
-    <string name="support_modules_description">在模块列表中长按任何模块并选择“%1$s”</string>
+    <string name="support_modules_description">在模块列表长按模块并选择“%1$s”。</string>
     <string name="support_framework_label">框架/安装器支持</string>
     <string name="support_faq_label">常见问题/已知问题</string>
     <string name="support_donate_label">捐赠</string>
-    <string name="support_donate_description">如果您想感谢 Xposed 作者，可以在此向 rovo89 捐赠</string>
+    <string name="support_donate_description">如果您想对 Xposed 表示感谢，您可以在此向 rovo89 捐赠</string>
 
     <!-- Logs tab  -->
+    <string name="logs_load_failed">无法读取日志：</string>
     <string name="logs_save_failed">无法将日志写入 SD 卡：</string>
-    <string name="sdcard_not_writable">SD 卡未找到或不可写入</string>
-    <string name="menuClearLog">立刻清理日志</string>
-    <string name="logs_cleared">日志清理成功</string>
-    <string name="logs_clear_failed">无法清理日志：</string>
+    <string name="sdcard_not_writable">未找到 SD 卡或不可写入</string>
+    <string name="log_too_large">日志文件大于 %1$,d kB，已跳过开头的 %2$,d kB</string>
+    <string name="menuClearLog">清空日志</string>
+    <string name="logs_cleared">日志已清空</string>
+    <string name="logs_clear_failed">无法清空日志：</string>
     <string name="log_is_empty">日志为空</string>
     <string name="scroll_top">滚动页面至顶部</string>
+    <string name="scroll_bottom">滚动页面至底部</string>
 
     <!-- About tab -->
     <string name="about_developers_label">主要开发者</string>
+    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> 与 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>\n<a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> 与 <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> 提供错误修正与 Material 设计</string>
     <string name="about_translator_label">翻译</string>
-    <string name="translator">Phantom</string>
+    <string name="translator">Alphaeva</string>
     <string name="about_version_label">版本</string>
     <string name="about_source_label">源码</string>
-    <string name="about_libraries_label">使用的库文件</string>
+    <string name="about_libraries_label">使用的源码</string>
 
     <!-- DownloadView -->
     <string name="download_view_download">下载</string>
     <string name="download_view_install">安装</string>
     <string name="download_view_cancel">取消</string>
-    <string name="download_view_no_url">无下载地址可用</string>
+    <string name="download_view_no_url">下载地址不可用</string>
     <string name="download_view_running">正在下载（%1$,d / %2$,d kB）</string>
-    <string name="download_view_waiting">下载等待中</string>
+    <string name="download_view_waiting">等待下载中</string>
     <string name="download_view_successful">下载成功</string>
     <string name="download_view_failed">下载失败（错误 %d）</string>
+    <string name="download_view_size">大小：%s KB</string>
 
     <!-- DownloadUtils -->
     <string name="download_md5sum_incorrect">MD5 校验码错误（下载项：%1$s，预期：%2$s）</string>
     <string name="download_could_not_read_file">无法读取下载文件：%s</string>
-    <string name="download_no_valid_apk">下载的文件不是有效的 APK（或不兼容）</string>
+    <string name="download_no_valid_apk">下载的文件不是有效的 APK 文件（或不兼容）</string>
     <string name="download_incorrect_package_name">包名错误（下载项：%1$s，预期：%2$s）</string>
+    <string name="download_running">正在下载中</string>
+    <string name="download_progress">%1$,d / %2$,d kB</string>
 
     <!-- RepoLoader -->
-    <string name="repo_download_failed_http">下载 %1$s 失败：%2$d（%3$s）</string>
-    <string name="repo_download_failed">下载 %1$s 失败：%2$s</string>
+    <string name="repo_download_failed_http">下载 %1$s 时出错：%2$d（%3$s）</string>
+    <string name="repo_download_failed">下载 %1$s 时出错：%2$s</string>
+    <string name="repo_load_failed">无法从 %1$s 加载库：\n%2$s</string>
 
     <!-- Most of these belong to currently hidden features -->
-    <string name="warning_installed_on_external_storage">该模块不能载入，因为它安装在 SD 卡上，请将它移至内部存储。</string>
+    <string name="warning_installed_on_external_storage">该模块无法载入，因为它已安装在 SD 卡上，请将它移至内置存储。</string>
+    <string name="warning_forward_locked">本模块无法载入，因为它已经被前向锁定，请联系该模块的开发者。</string>
+    <string name="export_modules">导出已启用的模块列表</string>
+    <string name="import_modules">导入已启用的模块列表</string>
     <string name="view">视图</string>
     <string name="export_">导出…</string>
     <string name="import_">导入…</string>
@@ -185,6 +228,8 @@
     <string name="install_remove">安装和移除</string>
     <string name="download_remove">下载和移除</string>
     <string name="module_saved">模块保存于 %1$s</string>
-    <string name="loading">载入中…</string>
+    <string name="loading">正在载入…</string>
+    <string name="save">保存</string>
+    <string name="update_download_list">下拉刷新模块下载列表</string>
 
 </resources>
