--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,6 +27,7 @@
     <string name="soft_reboot">Быстрая перезагрузка</string>
     <string name="reboot">Полная перезагрузка</string>
     <string name="reboot_recovery">Перезагрузить в Recovery</string>
+    <string name="not_now">Не сейчас</string>
     <string name="reboot_failed">Сбой перезагрузки. Пожалуйста, используйте встроенную функцию перезагрузки на устройстве.</string>
     <string name="auto_flash_note">%s будет прошита автоматически при нажатии "OK".</string>
     <string name="reboot_confirmation">Хотите перезагрузить устройство сейчас?</string>
@@ -37,9 +38,24 @@
     <string name="framework_active">Xposed Framework версии %s активирован!</string>
     <string name="framework_not_active">Xposed Framework версия %s установлена, но не активирована. Пожалуйста проверьте логи.</string>
     <string name="framework_not_installed">Xposed Framework не установлен.</string>
+    <string name="countdown">%1$s (%2$d)</string>
+    <string name="flash_error_timeout">Время ожидания истекло</string>
+    <string name="flash_error_shell_died">Выполнение неожиданно прервалось</string>
+    <string name="flash_error_invalid_zip">Нету ZIP файла для прошивки</string>
+    <string name="flash_error_not_flashable_in_app">Этот файл прошивается только через рекавери.</string>
+    <string name="flash_error_default">Произошла ошибка %d</string>
     <string name="status">Состояние Xposed</string>
     <string name="xposed_on_next_reboot">Xposed Framework будет включен после перезагрузки</string>
     <string name="xposed_off_next_reboot">Xposed Framework будет выключен после перезагрузки</string>
+    <string name="show_outdated">Показать старые версии</string>
+    <string name="framework_device_info">Ваше устройство</string>
+    <string name="framework_install">Простая установка</string>
+    <string name="framework_uninstall">Удаление</string>
+    <string name="framework_install_recovery">Установка через рекавери</string>
+    <string name="framework_uninstall_recovery">Удаление через рекавери</string>
+    <string name="framework_delete">Удалить загруженный файл</string>
+    <string name="framework_zip_load_failed">Не удалось загрузить ZIP файл. Повторите попытку.</string>
+    <string name="framework_no_zips">Не найдено подходящих файлов, похоже, что устройство в настоящее время не поддерживается.</string>
 
     <!-- File operations -->
     <string name="root_failed">"Сбой получения прав рут-доступа.\n\nУбедитесь, что на устройстве есть рут и команды оболочки не блокируются."</string>
@@ -55,6 +71,7 @@
     <string name="module_is_not_activated_yet">Xposed модуль еще не активирован</string>
     <string name="module_is_not_activated_yet_detailed">%s был установлен но не активирован.</string>
     <string name="activate_and_reboot">Активировать и перезагрузить</string>
+    <string name="activate_only">Активировать</string>
     <string name="module_activated">Модуль Xposed был активирован</string>
     <string name="module_empty_description">(описание отсутствует)</string>
     <string name="module_no_ui">Этот модуль не содержит пользовательского интерфейса</string>
@@ -94,7 +111,7 @@
     <string name="download_sorting_status">Сортировать по статусу</string>
     <string name="download_sorting_updated">Сортировать по последнему обновлению</string>
     <string name="download_sorting_created">Сортировать по дате создания</string>
-    <string name="download_section_framework">Xposed Frameworkk</string>
+    <string name="download_section_framework">Xposed Framework</string>
     <string name="download_section_update_available">Доступно обновление</string>
     <string name="download_section_installed">Установлен</string>
     <string name="download_section_not_installed">Не установлен</string>
@@ -108,6 +125,8 @@
 
     <!-- Settings tab -->
     <string name="settings_group_download">Загрузка</string>
+    <string name="settings_enable_downloads">Включить загрузки</string>
+    <string name="settings_enable_downloads_summary">Разрешить Xposed Installer проверять обновления модулей и Framework</string>
     <string name="settings_release_type">Отображение версий модуля</string>
     <string name="settings_group_experimental">Экспериментальное</string>
     <string name="settings_disable_resources">Не изменять ресурсы</string>
@@ -135,8 +154,10 @@
     <string name="support_donate_description">Если вы хотите отблагодарить за Xposed, вы можете сделать пожертвование для rovo89 здесь:</string>
 
     <!-- Logs tab  -->
+    <string name="logs_load_failed">Не удалось прочитать логи:</string>
     <string name="logs_save_failed">Невозможно записать логи на SD-карту:</string>
     <string name="sdcard_not_writable">SD-карта не найдена или запись на неё невозможна</string>
+    <string name="log_too_large">Файл логов больше чем %1$,d кбайт, пропущены первые %2$,d кбайт</string>
     <string name="menuClearLog">Очистить логи</string>
     <string name="logs_cleared">Логи успешно очищены</string>
     <string name="logs_clear_failed">Невозможно очистить логи:</string>
@@ -162,12 +183,15 @@
     <string name="download_view_waiting">Ожидает скачивания</string>
     <string name="download_view_successful">Скачивание завершено</string>
     <string name="download_view_failed">Ошибка загрузки (ошибка %d)</string>
+    <string name="download_view_size">Размер: %s кбайт</string>
 
     <!-- DownloadUtils -->
     <string name="download_md5sum_incorrect">Сумма MD5 не совпадает (загружено: %1$s, ожидалось: %2$s)</string>
     <string name="download_could_not_read_file">Не удалось прочитать загруженный файл: %s</string>
     <string name="download_no_valid_apk">Загруженный файл не является APK (или несовместим)</string>
     <string name="download_incorrect_package_name">Некорректное название пакета (загружено: %1$s, ожидалось: %2$s)</string>
+    <string name="download_running">Выполняется загрузка</string>
+    <string name="download_progress">%1$,d / %2$,d кбайт</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Загрузка %1$s прервана: %2$d (%3$s)</string>
@@ -176,6 +200,9 @@
 
     <!-- Most of these belong to currently hidden features -->
     <string name="warning_installed_on_external_storage">Этот модуль не может быть загружен, потому что он установлен на SD-карту, переместите его во внутреннюю память.</string>
+    <string name="warning_forward_locked">Этот модуль не может быть загружен, так как он заблокирован, обратитесь к разработчику модуля.</string>
+    <string name="export_modules">Экспорт списка включенных модулей</string>
+    <string name="import_modules">Импорт списка включенных модулей</string>
     <string name="view">Смотреть</string>
     <string name="export_">Экспорт модулей</string>
     <string name="import_">Импорт модулей</string>
@@ -198,5 +225,6 @@
     <string name="file_is_empty">Файлов нет</string>
     <string name="install_remove">Установить и удалить</string>
     <string name="loading">Загрузка…</string>
+    <string name="update_download_list">Свайп вниз для обновления списка модулей</string>
 
 </resources>
